[gd_scene load_steps=7 format=2]

[ext_resource path="res://bestia_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/GameUI/WorldTemperature/WorldTemperature.gd" type="Script" id=2]
[ext_resource path="res://scenes/GameUI/WorldTemperature/thermometer-half-solid.svg" type="Texture" id=3]
[ext_resource path="res://scenes/GameUI/WorldTemperature/temp-wheel.png" type="Texture" id=4]
[ext_resource path="res://scenes/GameUI/WorldTemperature/temp-limit.png" type="Texture" id=5]
[ext_resource path="res://scenes/GameUI/WorldTemperature/marker.png" type="Texture" id=6]

[node name="WorldTemperature" type="HBoxContainer"]
margin_right = 124.0
margin_bottom = 40.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/separation = 4
script = ExtResource( 2 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 20.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="TempBar" type="Control" parent="."]
margin_left = 24.0
margin_right = 124.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 11 )

[node name="TempWheel" type="TextureRect" parent="TempBar"]
margin_top = 16.0
margin_right = 100.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 11 )
texture = ExtResource( 4 )

[node name="MarkerLow" type="TextureRect" parent="TempBar"]
margin_top = 14.0
margin_right = 11.0
margin_bottom = 25.0
rect_min_size = Vector2( 11, 11 )
texture = ExtResource( 5 )

[node name="MarkerHigh" type="TextureRect" parent="TempBar"]
margin_top = 14.0
margin_right = 11.0
margin_bottom = 25.0
rect_min_size = Vector2( 11, 11 )
texture = ExtResource( 5 )

[node name="Marker" type="TextureRect" parent="TempBar"]
margin_top = 14.0
margin_right = 11.0
margin_bottom = 25.0
rect_min_size = Vector2( 11, 11 )
texture = ExtResource( 6 )

[node name="TempLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 6.0
margin_right = 172.0
margin_bottom = 32.0
text = "23 Â°C"
